data/derived/comb/progs/unify/prog0734.ml.out
Characters 204-213:
  | [] -> (nextCarry, nextCarry @ [result mod 10] @ [])
                      ^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
